set(GTEST_HOME  /home/hpjeon/sw_local/gtest)
include_directories(${GTEST_HOME}/include)
include_directories(${CMAKE_SOURCE_DIR}/src)
link_directories(${GTEST_HOME}/lib)

set(source1 test1.cpp)
set(source2 test2.cpp)
set(source3 test3.cpp)
add_executable(test1 ${source1})
add_executable(test2 ${source2})
add_executable(test3 ${source3})
target_link_libraries(test1 gtest pthread)
target_link_libraries(test2 gtest pthread)
target_link_libraries(test3 gtest pthread)
#
add_test(NAME t1 COMMAND test1)
add_test(NAME t2 COMMAND test2)
add_test(NAME t3 COMMAND test3)
set_tests_properties(t1 PROPERTIES LABELS basic)
set_tests_properties(t2 t3 PROPERTIES LABELS class)
